// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardList /> should render a collection on 3column 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 2rem;
  margin-right: calc(-1 * 1rem);
  margin-bottom: 3.2rem;
  margin-left: calc(-1 * 1rem);
  padding: 0;
  list-style-type: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: calc(100% / 3 - 2 * 1rem);
  margin: 1rem;
  padding: 0;
}

.c2 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 0;
  left: 50%;
  width: 7rem;
  height: 0.4rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-top: 1.6rem;
  text-align: center;
}

.c0 {
  margin: 0 auto 1rem;
  margin-bottom: 4rem;
  text-align: center;
}

.c5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  margin: 0;
  padding: 3.2rem 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(117,152,214,0.12),0 1rem 1.5rem rgba(117,152,214,0.1);
  cursor: pointer;
  -webkit-transition: box-shadow 250ms linear, -webkit-transform 100ms linear;
  -webkit-transition: box-shadow 250ms linear, transform 100ms linear;
  transition: box-shadow 250ms linear, transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5:hover,
.c5:active,
.c5:focus {
  color: #3e486e;
  box-shadow: 0 1rem 5rem rgba(117,152,214,0.2),0 1rem 1.5rem rgba(117,152,214,0.25);
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c6 {
  padding-right: 1rem;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin: 0;
}

@media (max-width:1180px) {
  .c4 {
    width: calc( 100% / 2 - 2 * 1rem );
  }
}

@media (max-width:980px) {
  .c4 {
    width: calc( 100% / 1 - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c4 {
    width: calc( 100% - 1 * 1rem );
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 2.4rem;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 2rem 1.6rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h2
      class="c1"
    >
      <div
        class="c2"
      />
      Hello
    </h2>
    
  </header>
  <ul
    class="c3"
  >
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 1
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 2
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 3
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 4
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 5
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 6
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 7
            </h3>
          </div>
        </div>
      </button>
    </li>
  </ul>
</div>
`;

exports[`<CardList /> should render a collection with a title 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 2rem;
  margin-right: calc(-1 * 1rem);
  margin-bottom: 3.2rem;
  margin-left: calc(-1 * 1rem);
  padding: 0;
  list-style-type: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: calc(100% / 4 - 2 * 1rem);
  margin: 1rem;
  padding: 0;
}

.c2 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 0;
  left: 50%;
  width: 7rem;
  height: 0.4rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-top: 1.6rem;
  text-align: center;
}

.c0 {
  margin: 0 auto 1rem;
  margin-bottom: 4rem;
  text-align: center;
}

.c5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  margin: 0;
  padding: 3.2rem 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(117,152,214,0.12),0 1rem 1.5rem rgba(117,152,214,0.1);
  cursor: pointer;
  -webkit-transition: box-shadow 250ms linear, -webkit-transform 100ms linear;
  -webkit-transition: box-shadow 250ms linear, transform 100ms linear;
  transition: box-shadow 250ms linear, transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5:hover,
.c5:active,
.c5:focus {
  color: #3e486e;
  box-shadow: 0 1rem 5rem rgba(117,152,214,0.2),0 1rem 1.5rem rgba(117,152,214,0.25);
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c6 {
  padding-right: 1rem;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin: 0;
}

@media (max-width:1180px) {
  .c4 {
    width: calc( 100% / 3 - 2 * 1rem );
  }
}

@media (max-width:980px) {
  .c4 {
    width: calc( 100% / 2 - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c4 {
    width: calc( 100% - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 2.4rem;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 2rem 1.6rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h2
      class="c1"
    >
      <div
        class="c2"
      />
      Hello
    </h2>
    
  </header>
  <ul
    class="c3"
  >
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 1
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 2
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 3
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 4
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 5
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 6
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c4"
    >
      <button
        class="c5"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              Title 7
            </h3>
          </div>
        </div>
      </button>
    </li>
  </ul>
</div>
`;

exports[`<CardList /> should render a collection with a title and description 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 2rem;
  margin-right: calc(-1 * 1rem);
  margin-bottom: 3.2rem;
  margin-left: calc(-1 * 1rem);
  padding: 0;
  list-style-type: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: calc(100% / 4 - 2 * 1rem);
  margin: 1rem;
  padding: 0;
}

.c2 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 0;
  left: 50%;
  width: 7rem;
  height: 0.4rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-top: 1.6rem;
  text-align: center;
}

.c0 {
  margin: 0 auto 1rem;
  margin-bottom: 4rem;
  text-align: center;
}

.c3 {
  margin-top: 1rem;
  margin-bottom: 0;
  padding-left: 0;
}

.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  margin: 0;
  padding: 3.2rem 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(117,152,214,0.12),0 1rem 1.5rem rgba(117,152,214,0.1);
  cursor: pointer;
  -webkit-transition: box-shadow 250ms linear, -webkit-transform 100ms linear;
  -webkit-transition: box-shadow 250ms linear, transform 100ms linear;
  transition: box-shadow 250ms linear, transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6:hover,
.c6:active,
.c6:focus {
  color: #3e486e;
  box-shadow: 0 1rem 5rem rgba(117,152,214,0.2),0 1rem 1.5rem rgba(117,152,214,0.25);
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c7 {
  padding-right: 1rem;
}

.c8 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin: 0;
}

@media (max-width:1180px) {
  .c5 {
    width: calc( 100% / 3 - 2 * 1rem );
  }
}

@media (max-width:980px) {
  .c5 {
    width: calc( 100% / 2 - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c5 {
    width: calc( 100% - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 2.4rem;
  }
}

@media (max-width:600px) {
  .c3 {
    padding-left: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    padding: 2rem 1.6rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h2
      class="c1"
    >
      <div
        class="c2"
      />
      Hello
    </h2>
    <p
      class="c3"
    >
      Hello Tiles
    </p>
  </header>
  <ul
    class="c4"
  >
    <li
      class="c5"
    >
      <button
        class="c6"
      >
        <div>
          <div
            class="c7"
          >
            
            <h3
              class="c8"
            >
              Title 1
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c5"
    >
      <button
        class="c6"
      >
        <div>
          <div
            class="c7"
          >
            
            <h3
              class="c8"
            >
              Title 2
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c5"
    >
      <button
        class="c6"
      >
        <div>
          <div
            class="c7"
          >
            
            <h3
              class="c8"
            >
              Title 3
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c5"
    >
      <button
        class="c6"
      >
        <div>
          <div
            class="c7"
          >
            
            <h3
              class="c8"
            >
              Title 4
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c5"
    >
      <button
        class="c6"
      >
        <div>
          <div
            class="c7"
          >
            
            <h3
              class="c8"
            >
              Title 5
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c5"
    >
      <button
        class="c6"
      >
        <div>
          <div
            class="c7"
          >
            
            <h3
              class="c8"
            >
              Title 6
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c5"
    >
      <button
        class="c6"
      >
        <div>
          <div
            class="c7"
          >
            
            <h3
              class="c8"
            >
              Title 7
            </h3>
          </div>
        </div>
      </button>
    </li>
  </ul>
</div>
`;

exports[`<CardList /> should render a collection with a title with a link and a desc 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 2rem;
  margin-right: calc(-1 * 1rem);
  margin-bottom: 3.2rem;
  margin-left: calc(-1 * 1rem);
  padding: 0;
  list-style-type: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: calc(100% / 4 - 2 * 1rem);
  margin: 1rem;
  padding: 0;
}

.c2 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 0;
  left: 50%;
  width: 7rem;
  height: 0.4rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-top: 1.6rem;
  text-align: center;
}

.c0 {
  margin: 0 auto 1rem;
  margin-bottom: 4rem;
  text-align: center;
}

.c4 {
  margin-top: 1rem;
  margin-bottom: 0;
  padding-left: 0;
}

.c3 {
  color: #2f3b6c;
  font-weight: normal;
  font-family: "Merriweather",serif;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  color: #2f3b6c;
}

.c7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  margin: 0;
  padding: 3.2rem 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(117,152,214,0.12),0 1rem 1.5rem rgba(117,152,214,0.1);
  cursor: pointer;
  -webkit-transition: box-shadow 250ms linear, -webkit-transform 100ms linear;
  -webkit-transition: box-shadow 250ms linear, transform 100ms linear;
  transition: box-shadow 250ms linear, transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7:hover,
.c7:active,
.c7:focus {
  color: #3e486e;
  box-shadow: 0 1rem 5rem rgba(117,152,214,0.2),0 1rem 1.5rem rgba(117,152,214,0.25);
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c8 {
  padding-right: 1rem;
}

.c9 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin: 0;
}

@media (max-width:1180px) {
  .c6 {
    width: calc( 100% / 3 - 2 * 1rem );
  }
}

@media (max-width:980px) {
  .c6 {
    width: calc( 100% / 2 - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c6 {
    width: calc( 100% - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 2.4rem;
  }
}

@media (max-width:600px) {
  .c4 {
    padding-left: 0;
  }
}

@media (max-width:600px) {
  .c7 {
    padding: 2rem 1.6rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h2
      class="c1"
    >
      <div
        class="c2"
      />
      <a
        class="c3"
        href="https://code.travail.gouv.fr"
      >
        CDTN
      </a>
    </h2>
    <p
      class="c4"
    >
      le code du travail numérique
    </p>
  </header>
  <ul
    class="c5"
  >
    <li
      class="c6"
    >
      <button
        class="c7"
      >
        <div>
          <div
            class="c8"
          >
            
            <h3
              class="c9"
            >
              Title 1
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c6"
    >
      <button
        class="c7"
      >
        <div>
          <div
            class="c8"
          >
            
            <h3
              class="c9"
            >
              Title 2
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c6"
    >
      <button
        class="c7"
      >
        <div>
          <div
            class="c8"
          >
            
            <h3
              class="c9"
            >
              Title 3
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c6"
    >
      <button
        class="c7"
      >
        <div>
          <div
            class="c8"
          >
            
            <h3
              class="c9"
            >
              Title 4
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c6"
    >
      <button
        class="c7"
      >
        <div>
          <div
            class="c8"
          >
            
            <h3
              class="c9"
            >
              Title 5
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c6"
    >
      <button
        class="c7"
      >
        <div>
          <div
            class="c8"
          >
            
            <h3
              class="c9"
            >
              Title 6
            </h3>
          </div>
        </div>
      </button>
    </li>
    <li
      class="c6"
    >
      <button
        class="c7"
      >
        <div>
          <div
            class="c8"
          >
            
            <h3
              class="c9"
            >
              Title 7
            </h3>
          </div>
        </div>
      </button>
    </li>
  </ul>
</div>
`;

exports[`<CardList /> should render a single title 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 2rem;
  margin-right: calc(-1 * 1rem);
  margin-bottom: 3.2rem;
  margin-left: calc(-1 * 1rem);
  padding: 0;
  list-style-type: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: calc(100% / 4 - 2 * 1rem);
  margin: 1rem;
  padding: 0;
}

.c2 {
  position: absolute;
  background-color: #7598d6;
  border-radius: 0.6rem;
  top: 0;
  left: 50%;
  width: 7rem;
  height: 0.4rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-top: 1.6rem;
  text-align: center;
}

.c0 {
  margin: 0 auto 1rem;
  margin-bottom: 4rem;
  text-align: center;
}

.c5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  margin: 0;
  padding: 3.2rem 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(117,152,214,0.12),0 1rem 1.5rem rgba(117,152,214,0.1);
  cursor: pointer;
  -webkit-transition: box-shadow 250ms linear, -webkit-transform 100ms linear;
  -webkit-transition: box-shadow 250ms linear, transform 100ms linear;
  transition: box-shadow 250ms linear, transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5:hover,
.c5:active,
.c5:focus {
  color: #3e486e;
  box-shadow: 0 1rem 5rem rgba(117,152,214,0.2),0 1rem 1.5rem rgba(117,152,214,0.25);
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c6 {
  padding-right: 1rem;
}

.c7 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin: 0;
}

.c8 {
  margin-top: 1rem;
}

@media (max-width:1180px) {
  .c4 {
    width: calc( 100% / 3 - 2 * 1rem );
  }
}

@media (max-width:980px) {
  .c4 {
    width: calc( 100% / 2 - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c4 {
    width: calc( 100% - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 2.4rem;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 2rem 1.6rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h2
      class="c1"
    >
      <div
        class="c2"
      />
      Hello
    </h2>
    
  </header>
  <ul
    class="c3"
  >
    <li
      class="c4"
    >
      <a
        class="c5"
        href="#"
      >
        <div>
          <div
            class="c6"
          >
            
            <h3
              class="c7"
            >
              ok
            </h3>
          </div>
        </div>
        <div
          class="c8"
        >
          coucou
        </div>
      </a>
    </li>
  </ul>
</div>
`;
